--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
     "express": "^5.2.1",
+    "lucide-react": "^0.562.0",
     "pdfkit": "^0.17.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
